# laba8

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md
.github/workflows/: app.yml
banking/: Account.cpp  Account.h  CMakeLists.txt
data/: ltest.cpp
