cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(bp)
set(DAT_VERSION_MAJOR 0)
set(DAT_VERSION_MINOR 1)
set(DAT_VERSION_PATCH 0)
set(DAT_VERSION_TWEAK 0)
set(DAT_VERSION ${DAT_VERSION_MAJOR}.${DAT_VERSION_MINOR}.${DAT_VERSION_PATCH}.${DAT_VERSION_TWEAK})
set(DAT_VERSION_STRING "v${DAT_VERSION}")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/banking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/banking)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/third-party/CMake-codecov/cmake" ${CMAKE_MODULE_PATH})

if (BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})  

  file(GLOB TEST_SOURCES data/*.cpp)
  add_executable(test_uno ${TEST_SOURCES})
  target_link_libraries(test_uno gtest transaction_lib gtest_main account_lib gmock)
  add_test(NAME test_uno COMMAND test_uno)

  if (BUILD_COVERAGE)
    set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
    find_package(codecov)
    add_coverage(test_uno)
    list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/data/*'")
    coverage_evaluate()
  endif ()
endif ()
include(CPackConfig.cmake)
